Fixes text alignment of submission error

--- a/src/components/ConfigBucket/ConfigBucketForm.module.css
+++ b/src/components/ConfigBucket/ConfigBucketForm.module.css
@@ -9,7 +9,6 @@
 }
 
 .config-bucket-form__submit-error {
-  display: flex;
   margin: 0;
   min-height: 48px;
   color: var(--color-red);
